--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Embed 3D",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Is able to show .glb and .stl files in Obsidian. Functions in combination with the dataview.js plugin",
+	"description": "Is able to show .glb and .stl files in Obsidian. Functions in combination with the dataview.js plugin. Please follow the installation instructions to get this plugin to work properly",
 	"author": "Jesse Strijker",
 	"authorUrl": "https://obsidian.md",
 	"fundingUrl": "https://obsidian.md/pricing",
