--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@types/three": "^0.169.0",
 		"fs": "^0.0.1-security",
-		"three": "^0.169.0"
+		"three": "^0.169.0",
+		"three-stdlib": "^2.33.0"
 	}
 }
