added error messages, better ground plane positions, collapsing logic

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"dependencies": {
 		"@types/three": "^0.169.0",
+		"codemirror": "^6.0.2",
 		"three": "^0.169.0",
 		"three-stdlib": "^2.33.0",
 		"uuid": "^11.0.3"
